# DogFight

./: .gitignore  .gitmodules  CMakeLists.txt
dogfight/: definitions.h  game.h  main.cpp
dogfight/ai/: ai_basicbehaviourtree.h  ai_testingtask.cpp  ai_testingtask.h
dogfight/components/: cmp_audio.cpp  cmp_audio.h  cmp_bullet.cpp  cmp_bullet.h  cmp_decision_tree.h  cmp_enemy_turret.cpp  cmp_health_component.cpp  cmp_health_component.h  cmp_particlesystem.cpp  cmp_physics.cpp  cmp_physics.h  cmp_plane_physics.cpp  cmp_plane_physics.h  cmp_player_physics.cpp  cmp_sprite.cpp  cmp_sprite.h  cmp_state_machine.h  cmp_text.cpp  cmp_weapon.cpp  cmp_weapon.h
dogfight/controllers/: shipPlayerController.cpp  shipPlayerController.h
dogfight/engine/: game_resources.cpp  game_resources.h
dogfight/entities/: Ship.cpp  Ship.h  ambient_manager.cpp  ambient_manager.h  button.cpp  button.h  camera.cpp  camera.h  enemy.cpp  enemy.h  planet.cpp  planet.h  player.cpp  player.h  projectile.cpp  projectile.h
dogfight/scenes/: scene_mainMenu.cpp  scene_mainMenu.h  scene_menu.cpp  scene_menuMain.cpp  scene_menuMain.h  scene_menuSettings.cpp  scene_menuSettings.h  scene_testing.cpp  scene_testing.h
engine/: delegates.h  engine.cpp  engine.h  input_handler.cpp  input_handler.h  pool.h  system_controller.cpp  system_controller.h  system_physics.cpp  system_physics.h  system_renderer.cpp  system_renderer.h  system_resources.cpp  system_resources.h  system_ui.cpp  system_ui.h  utils.cpp  utils.h
engine/ai/: ai.h  behaviour_tree.cpp  behaviour_tree.h  task.h
engine/graphics/: stdafx.h
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
planet_protector/: definitions.h  game.h  main.cpp
planet_protector/ai/: ai_basicbehaviourtree.cpp  ai_testingtask.cpp  ai_testingtask.h
planet_protector/components/: cmp_audio.cpp  cmp_audio.h  cmp_bullet.cpp  cmp_bullet.h  cmp_decision_tree.cpp  cmp_particlesystem.h  cmp_text.cpp  cmp_text.h  cmp_weapon.cpp
planet_protector/controllers/: shipPlayerController.cpp  shipPlayerController.h
planet_protector/entities/: Ship.cpp  Ship.h  ambient_manager.h  button.cpp  button.h  camera.cpp  camera.h  enemy.cpp  explosion.cpp  explosion.h  planet.cpp  planet.h  player.cpp  player.h  projectile.cpp  projectile.h  spawnpoint.cpp  spawnpoint.h
planet_protector/entities/editor/: editor_shape.cpp  editor_shape.h
planet_protector/scenes/: scene_editor.cpp  scene_editor.h  scene_menuMain.cpp  scene_menuMain.h  scene_menuSettings.cpp  scene_menuSettings.h  scene_testing.cpp  scene_testing.h
res/data/levels/: level_1.json
res/data/planes/: enemy1.json  player.json
res/data/projectiles/: bomb.json  projectile_bomb_basic.json  projectile_laser_basic.json  test.json
res/data/settings/: Player1controls.json  Player2controls.json
res/data/shapes/: bomb.json  shape_shield.json  ship.json
res/data/shapes/projectiles/: shape_bomb_basic.json  shape_laser_basic.json
res/data/shapes/ships/: shape_basic_enemy.json  shape_bomber_enemy.json
res/data/shapes/weapons/: old.json  shape_bomb_basic.json  shape_laser_basic.json
res/data/ships/: ship_basic.json  ship_bomber.json  ship_player.json
res/data/weapons/: basic.json  weapon_bomb_basic.json  weapon_laser_basic.json
res/shaders/: basic.frag  shockwave.frag
